# AutoPlumber

./: .gitignore  demo.py  main.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
AutoPlumber/preprocessor/: imputer.py  outlier_remover.py
autoplumber/: __init__.py
autoplumber/core/: __init__.py  auto_plumber.py  pipeline.py  pipeline_search.py
autoplumber/preprocessor/: __init__.py  encoder.py  imputer.py  outlier_remover.py  scaler.py
autoplumber/utils/: __init__.py  logger.py  visualization.py
benchmarks/: titanic_benchmark.py
tests/: test_auto_plumber.py  test_outlier_remover.py  test_pipeline.py
