[build-system]
requires=["setuptools>=61.0", "wheel"]
build-backend= "setuptools.build_meta"

[project]
name = "autoplumber"
version = "0.1.0"
description = "AutoPlumber: Automated Data Preprocessing for Machine Learning"
authors = [{name="Kirisame-ame"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "flake8>=3.8",
    "black>=21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["autoplumber*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]